[gd_scene load_steps=4 format=3 uid="uid://c0sene84p44ry"]

[ext_resource type="Script" uid="uid://mk37pv18gbuy" path="res://src/game/game.gd" id="1_7uq6d"]
[ext_resource type="PackedScene" uid="uid://coeskkfvneigs" path="res://src/map/game_map.tscn" id="2_kgj8g"]
[ext_resource type="PackedScene" uid="uid://ce880iha75f3d" path="res://src/ui/game_ui.tscn" id="3_l80un"]

[node name="Game" type="Node2D"]
script = ExtResource("1_7uq6d")

[node name="GameMap" parent="." instance=ExtResource("2_kgj8g")]

[node name="ParticleLayer" type="Node2D" parent="."]

[node name="GameUi" parent="." instance=ExtResource("3_l80un")]
